kubernetes/apps/argo-system/argo-cd/config/http-route.sops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: Argo CD
    gethomepage.dev/icon: argo-cd.png
    gethomepage.dev/description: GitOps control plane
    gethomepage.dev/app: argocd-server
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - argo.krapulax.dev
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
sops:
  age:
    - recipient: age1saea3t7l67lavg0ardepzys6egp50g82uvks98pk53xdlj57uf8sa2arcs
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsNzlEekRFVFBoM24xM2NP
[...]
        KMHxbUw9xxs2KU2FgOfw1ceGy2o1OBNJ66lw2oEPi5M63fxrQ+aiCQ==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-19T09:48:31Z"
  mac: ENC[AES256_GCM,data:2n00dmf4SvVWZgOArU1nWgJ9qDldo2JHtu4R+4KKQZ1CZawAKer+78NcFJDQ73BsAhhwz5usLcpQipKg7o1y6T5isjOjW7WsVGpjmIQpR2T4TW1D/2VVp3kA1QL2r0z/MtklTKH7YDbGl8hNMXhLfC2SBNJNm/8czDojyObGmfQ=,iv:h1RACdrhi6Zy53+85UGfBcZkQinlBEdsuHrgWYC3d9w=,tag:gteqiXwIkDqM35gfYJfL9A==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.1
